# story-time

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  cog.toml  rustfmt.toml
.github/workflows/: ci.yaml
src/: audio.rs  cli.rs  logging.rs  main.rs
src/command/: mod.rs  read_aloud.rs
src/io/: audio.rs
src/remote/: chatgpt.rs  elevenlabs.rs  mod.rs
