[package]
name = "story-time"
version = "0.1.0"
edition = "2021"

license = "UNLICENSE"
repository = "https://github.com/PurpleBooth/story-time"
description = "Tools for generating audio stories"
keywords = ["ai", "audio", "story"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.17.1", features = ["symphonia-all", "symphonia"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
chatgpt_rs = "1.2.3"
miette = { version = "5.10.0", features = ["fancy"] }
clap = { version = "4.4.5", features = ["derive", "cargo", "env"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "local-time"] }
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
feed-rs = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
humantime = { version = "2.1.0" }
html2text = "0.6.0"
deepl-api = "0.4.3"
quick-xml = "0.30.0"

[dev-dependencies]
tempfile = "3.8.0"
